Kubernetes_Assignment_Final/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-assignment
  labels:
    environment: learning
